--- a/RecipeNotebook/src/main/resources/static/views/header.html
+++ b/RecipeNotebook/src/main/resources/static/views/header.html
@@ -13,9 +13,11 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/logout">
-            <i class="bi bi-box-arrow-right me-1"></i>ログアウト
-          </a>
+          <form action="/logout" method="POST" style="display: inline;">
+            <button type="submit" class="btn btn-link nav-link" style="text-decoration: none;">
+              <i class="bi bi-box-arrow-right me-1"></i>ログアウト
+            </button>
+          </form>
         </li>
       </ul>
     </div>
