--- a/RecipeNotebook/src/main/resources/templates/detail.html
+++ b/RecipeNotebook/src/main/resources/templates/detail.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="_csrf" content="${_csrf.token}">
+  <meta name="_csrf_header" content="${_csrf.headerName}">
   <title>レシピ詳細</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet"
